:lipstick: [#2111] Fixed case-card icons alignment and card headings

--- a/src/open_inwoner/scss/components/Profile/_personal-overview.scss
+++ b/src/open_inwoner/scss/components/Profile/_personal-overview.scss
@@ -31,4 +31,8 @@
       font-weight: bold;
     }
   }
+
+  .profile-cards .card {
+    min-height: 190px;
+  }
 }
